# CreateNormals

./: .gitignore  CMakeLists.txt  ConnectedComponents.cpp  ConnectedComponents.h  ConvertDeps.cpp  CreateNormals.cpp  CreateNormals.h  CreateNormalsMain.cpp  LICENSE  README.md  Test_Normals.ipynb  nyu_list.txt  nyu_params.txt
python/: README.md  calc_normals.py
